--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/yurifreitas/crud-heroku/issues"
   },
-  "homepage": "https://github.com/yurifreitas/crud-heroku#readme"
+  "homepage": "https://github.com/yurifreitas/crud-heroku#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
